k8s.env/kafka/kafka-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/kafka-network: "true"
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
  podSelector:
    matchLabels:
        network/kafka-network: "true"
