k8s.env/kafka/kcat.network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-allow-kcat
spec:
  podSelector:
    matchLabels:
      service: kafka
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kcat
